k8s/clients-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clients-api
  template:
    metadata:
      labels:
        app: clients-api
    spec:
      containers:
        - name: clients-api
          image: 147997137049.dkr.ecr.us-east-1.amazonaws.com/clients-api:latest
          ports:
            - containerPort: 3000
