k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - clients.api.deltacapita.com
      secretName: clients-api-tls
  rules:
    - host: clients.api.deltacapita.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clients-api
                port:
                  number: 80
